# SeedCore

./: PHASE_7_COMPLETE.md  PHASE_8A_COMPLETE.md  PHASE_8B_COMPLETE.md  PHASE_8_PLAN.md  README.md  UI_GUIDE.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  test_bencode_standalone.rs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: bencode.rs  cleanup.rs  commands.rs  error.rs  lib.rs  magnet.rs  main.rs  scheduler.rs  state.rs  utils.rs
src-tauri/src/cloud/: mod.rs
src-tauri/src/commands/: credentials.rs  debrid.rs  general.rs  info.rs  mod.rs  torrent.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/debrid/: mod.rs  provider.rs  real_debrid.rs  request_queue.rs  torbox.rs  types.rs
src-tauri/src/disk/: mod.rs
src-tauri/src/download/: mod.rs
src-tauri/src/engine/: mod.rs
src-tauri/src/peer/: handshake.rs  manager.rs  message.rs  mod.rs
src-tauri/src/piece/: bitfield.rs  mod.rs  strategy.rs
src-tauri/src/torrent/: mod.rs
src-tauri/src/tracker/: http.rs  mod.rs
src-tauri/tests/: integration_test.rs
src/components/: AddTorrentDialog.tsx  AddTorrentModal.tsx  BottomPanel.tsx  DebridSettings.tsx  Header.tsx  Icons.tsx  SettingsDialog.tsx  Sidebar.tsx  SpeedChart.tsx  Toast.tsx  TorrentDetails.tsx  TorrentItem.tsx  TorrentList.tsx  TorrentTable.tsx  TorrentTableSkeleton.tsx  ViewToggle.tsx
src/hooks/: useKeyboardShortcuts.ts  useToast.ts
src/lib/: api.ts  utils.ts
src/stores/: useSettingsStore.ts  useTorrentStore.ts  useUIStore.ts
src/types/: index.ts
(+17 files in other folders)
