[package]
name = "seedcore"
version = "0.1.0"
description = "Modern, high-performance BitTorrent client"
authors = ["SeedCore Team"]
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "seedcore_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Networking
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# Data structures
bytes = "1"

# File system
fs2 = "0.4"

# Database (Sled)
sled = "0.34"
bincode = "1.3"
dirs = "5.0"
hex = "0.4"
urlencoding = "2.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Crypto
sha1 = "0.10"
rand = "0.8"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"

# Time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

